--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,13 @@
-APP_NAME="QR LOGISTICS I BACKEND"
+APP_NAME=joli_fleet_service
 APP_ENV=local
 APP_KEY=base64:PHQFo/eXeuE+8xpJEZgXOmgb63Y+S2lsliFFEoz4AeM=     
 APP_DEBUG=true 
-APP_URL=http://back.jobfithr1.jolitravel.jampzdev.com 
+APP_URL=http://back.qrlog1.jolitravel.local
 
 DB_CONNECTION=mariadb
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=jobfithr1
+DB_DATABASE=qrlog1
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -64,5 +64,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-ALLOWED_ORIGINS=http://front.jobfithr1.jolitravel.jampzdev.com:3001
+ALLOWED_ORIGINS=http://front.qrlog1.jolitravel.local:3007
 AUTH_BACKEND_URL=http://auth.jolitravel.local
