--- a/backend/.env
+++ b/backend/.env
@@ -64,5 +64,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-ALLOWED_ORIGINS=http://front.qrlog1.jolitravel.local:3007
-AUTH_BACKEND_URL=http://auth.jolitravel.local
+ALLOWED_ORIGINS=https://front.qrlog1.jampzdev.com
+AUTH_BACKEND_URL=https://back.qrlog1.jampzdev.com
